dxtbx.log
*** Error compiling 'dxtbx/format/FormatCBFMultiTile.py'...
  File "dxtbx/format/FormatCBFMultiTile.py", line 158
    print "hLL"
              ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "hLL")?

*** Error compiling 'dxtbx/format/FormatGatanDM4.py'...
  File "dxtbx/format/FormatGatanDM4.py", line 251
    print prefix + "DIR: {0}".format(name)
               ^
SyntaxError: invalid syntax

*** Error compiling 'dxtbx/format/FormatNexus.py'...
  File "dxtbx/format/FormatNexus.py", line 196
    print beam
             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print beam)?

*** Error compiling 'dxtbx/format/FormatPYunspecified.py'...
  File "dxtbx/format/FormatPYunspecified.py", line 88
    print "This is not a file; assume the data are in the defined dictionary format"
                                                                                   ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print "This is not a file; assume the data are in the defined dictionary format")?

*** Error compiling 'dxtbx/format/FormatSMVADSCSN928.py'...
  File "dxtbx/format/FormatSMVADSCSN928.py", line 67
    print FormatSMVADSCSN928.understand(arg)
                           ^
SyntaxError: invalid syntax

*** Error compiling 'dxtbx/format/FormatSMVTimePix_SU.py'...
  File "dxtbx/format/FormatSMVTimePix_SU.py", line 414
    print "FormatSMVTimePix_SU:", FormatSMVTimePix_SU.understand(arg)
                               ^
SyntaxError: invalid syntax

*** Error compiling 'dxtbx/format/FormatTIFFHelpers.py'...
  File "dxtbx/format/FormatTIFFHelpers.py", line 143
    print '(%d x %d) @ %d + %d' % (width, height, depth, header)
                              ^
SyntaxError: invalid syntax

*** Error compiling 'dxtbx/format/FormatXTC.py'...
  File "dxtbx/format/FormatXTC.py", line 78
    print 'This is an XTC file and can be read by PSANA'
                                                       ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print 'This is an XTC file and can be read by PSANA')?

*** Error compiling 'dxtbx/format/FormatXTCCspad.py'...
  File "dxtbx/format/FormatXTCCspad.py", line 150
    print 'No beam object initialized. Returning CSPAD detector without parallax corrections'
                                                                                            ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print 'No beam object initialized. Returning CSPAD detector without parallax corrections')?

*** Error compiling 'dxtbx/format/cbf_writer.py'...
  File "dxtbx/format/cbf_writer.py", line 308
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'dxtbx/format/nexus.py'...
  File "dxtbx/format/nexus.py", line 861
    print ""
           ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print "")?

